--- a/blg-security/blg-admin/src/main/resources/application-test.yml
+++ b/blg-security/blg-admin/src/main/resources/application-test.yml
@@ -5,12 +5,12 @@ spring:
     druid:
       first:  #数据源1
         url: jdbc:mysql://localhost:3306/blg_security?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8&useSSL=false
-        username: blg
-        password: 123456
+        username: root
+        password: dome661314
       second:  #数据源2
-        url: jdbc:mysql://10.10.168.18:3306/blg_security?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8&useSSL=false
-        username: blg
-        password: 123456
+        url: jdbc:mysql://127.0.0.1:3306/blg_security?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8&useSSL=false
+        username: root
+        password: dome661314
       initial-size: 10
       max-active: 100
       min-idle: 10
