--- a/blg-security/blg-api/src/main/resources/application-dev.yml
+++ b/blg-security/blg-api/src/main/resources/application-dev.yml
@@ -4,8 +4,8 @@ spring:
     driverClassName: com.mysql.jdbc.Driver
     druid:
       url: jdbc:mysql://localhost:3306/blg_security?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
-      username: blg
-      password: 123456
+      username: root
+      password: dome661314
       initial-size: 10
       max-active: 100
       min-idle: 10
